feat(subjects): Display only eligible components on the dashboard